// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/go/utils requests listVersions 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "proxy.golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/go-kit/kit/@v/list",
  },
]
`;

exports[`datasource/go/utils requests versionInfo 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "proxy.golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/go-kit/kit/@v/v0.5.0.info",
  },
]
`;
